    - remove debian/patches/ubuntu-codes-amazon.patch
    - remove debian/patches/ubuntu-codes-baidu.patch
    - update debian/patches/series.in
    - update debian/build/mozbuild.mk
    - add debian/searchplugins/*
  * defaults/preferences got renamed to defaults/pref again
    - update debian/firefox.install.in
    - update debian/firefox.links.in
    - update debian/apport/source_firefox.py.in

 -- Chris Coulson <chris.coulson@canonical.com>  Fri, 01 Jun 2012 16:19:11 +0100

firefox-trunk (14.0~a1~hg20120424r92149-0ubuntu1) precise; urgency=low

  * New upstream snapshot v14.0 A1 HG20120424R92149

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 3.2.3
  * Drop patches fixed upstream
    - remove debian/patches/no-sps-profiler-on-unsupported-archs.patch
    - update debian/patches/series
  * Refresh patches
    - update debian/patches/ubuntu-codes-google.patch
    - update debian/patches/revert-bmo621446-investigation.patch
    - update debian/patches/dont-include-hyphenation-patterns.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/allow-lockPref-everywhere.patch
    - update debian/patches/plugin-for-mimetype-pref.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/add-syspref-dir.patch
  * Install pdf.js
    - update debian/firefox.install.in
  * Add Keywords to the desktop file
    - update debian/firefox.desktop.in
  * Update desktop file translations
    - update debian/firefox.sh.in
  * Ensure that additional actions in the desktop file match the fd.o spec
    in precise
    - update debian/firefox.desktop.in
    - update debian/rules
  * Fix a small leak in nsPluginHost::FindPluginForType, caused by one
    of our patches
    - update debian/patches/plugin-for-mimetype-pref.patch
  * When a plugin is chosen using a "modules.plugins.mimetype." pref,
    only use it if it is enabled and handles the requested mimetype