@@ -1,3 +1,6 @@
 [Overrides]
 amazon*.xml
 google*.xml
+
+[Additions]
+duckduckgo.xml
