@@ -1,3 +1,6 @@
 [Overrides]
 ../en-GB/amazon-en-GB.xml
 google*.xml
+
+[Additions]
+duckduckgo.xml
