@@ -1,3 +1,6 @@
 [Overrides]
 ../fr/amazon-france.xml
 google*.xml
+
+[Additions]
+duckduckgo.xml
