@@ -115,8 +115,9 @@ firefox-trunk (15.0~a1~hg20120515r93983-0ubuntu1) UNRELEASED; urgency=low
     - update debian/firefox.install.in
     - update debian/firefox.links.in
     - update debian/apport/source_firefox.py.in
+  * Add searchplugin for DuckDuckGo
 
- -- Chris Coulson <chris.coulson@canonical.com>  Fri, 01 Jun 2012 16:19:11 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Fri, 01 Jun 2012 18:55:01 +0100
 
 firefox-trunk (14.0~a1~hg20120424r92149-0ubuntu1) precise; urgency=low
 
